[SNAPSHOT]
 * make redirect_uri optional while Access Token requesting on OAuth 2.0 (thanks to https://github.com/computerlove)
 * switch to java 9+ (from java 7 only) for compilation. Runtime is still java 7+. Complement README with links and RFC descriptions.
 * switch OAuth2 Bearer Token Usage from enum OAuth2SignatureType to interface BearerSignature to be extensible

[5.6.0]
 * remove support for obsolete NetEase (http://www.163.com/) and sohu 搜狐 (http://www.sohu.com/) (thanks to https://github.com/zawn)
 * add Multipart functionality to JDK Http Client (thanks to https://github.com/eos1d3)
 * switch OAuth2 ClientAuthenticationType from enum to interface ClientAuthentication to be extensible according to
   https://tools.ietf.org/html/rfc6749#section-2.3.2 (thanks to https://github.com/zawn)
 * add RuntimeException processing in async http clients (delivered to onError callbacks) (thanks to https://github.com/jochen314)
 * check 200 status code from response in OAuth2AccessTokenExtractor (thanks to https://github.com/jochen314)
 * fix case sensitive Http Headers comparison and sending Content-Type header along with content-type (thanks to https://github.com/marnix)
 * add HiOrg-Server (https://www.hiorg-server.de/) API (thanks to https://github.com/MartinBoehmer)

[5.5.0]
 * fix error parsing for Fitbit (thanks to https://github.com/danmana)
 * optimize debug log performance impact on prod in OAuth1 and fix
   NoClassDefFoundError on Android device with SDK 18 and lower (thanks to https://github.com/arcao)
 * add new API - MediaWiki (https://www.mediawiki.org/) (thanks to https://github.com/lucaswerkmeister)

[5.4.0]
 * fix missing support for scope for refresh_token grant_type (thanks to https://github.com/tlxtellef)
 * add email field to VKOAuth2AccessToken (thanks to https://github.com/grouzen)
 * add new API - Automatic (https://www.automatic.com/) (thanks to https://github.com/ramsrib)