@@ -1,0 +1,22 @@
+package com.github.scribejava.apis.service;
+
+import com.github.scribejava.apis.WunderlistAPI;
+import com.github.scribejava.core.httpclient.HttpClient;
+import com.github.scribejava.core.httpclient.HttpClientConfig;
+import com.github.scribejava.core.model.OAuthRequest;
+import com.github.scribejava.core.oauth.OAuth20Service;
+
+public class WunderlistOAuthService extends OAuth20Service {
+
+    public WunderlistOAuthService(WunderlistAPI api, String apiKey, String apiSecret, String callback, String scope,
+            String state, String responseType, String userAgent, HttpClientConfig httpClientConfig,
+            HttpClient httpClient) {
+        super(api, apiKey, apiSecret, callback, scope, state, responseType, userAgent, httpClientConfig, httpClient);
+    }
+
+    @Override
+    public void signRequest(String accessToken, OAuthRequest request) {
+        super.signRequest(accessToken, request);
+        request.addHeader("X-Client-ID", getApiKey());
+    }
+}
