@@ -5,7 +5,7 @@ import java.util.Random;
 import java.util.Scanner;
 import java.util.concurrent.ExecutionException;
 
-import com.github.scribejava.apis.WunderlistAPI20;
+import com.github.scribejava.apis.WunderlistAPI;
 import com.github.scribejava.core.builder.ServiceBuilder;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthRequest;
@@ -13,43 +13,42 @@ import com.github.scribejava.core.model.Response;
 import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.oauth.OAuth20Service;
 
-public class Wunderlist20Example {
+public class WunderlistExample {
 
     private static final String NETWORK_NAME = "Wunderlist";
     private static final String PROTECTED_RESOURCE_URL = "https://a.wunderlist.com/api/v1/user";
 
-    private Wunderlist20Example() {
+    private WunderlistExample() {
     }
 
     public static void main(String... args) throws IOException, InterruptedException, ExecutionException {
         // Replace these with your own values
-        final String apiKey = "your_api_key";
-        final String apiSecret = "your_api_secret";
+        final String apiKey = "apiKey";
+        final String apiSecret = "apiSecret";
         final String callbackUrl = "http://example.com/callback";
-        final String secretState = "security_token" + new Random().nextInt(999_999); 
-        
+        final String secretState = "security_token" + new Random().nextInt(999_999);
+
         final OAuth20Service service = new ServiceBuilder(apiKey)
                 .apiSecret(apiSecret)
                 .callback(callbackUrl)
                 .state(secretState)
                 .debug()
-                .build(WunderlistAPI20.instance());
-        final Scanner in = new Scanner(System.in, "UTF-8");
+                .build(WunderlistAPI.instance());
 
-        System.out.println("=== " + NETWORK_NAME + "'s OAuth Workflow ===");
-        System.out.println();
-        
-
-        // Obtain the Authorization URL
-        System.out.println("Fetching the Authorization URL...");
-        final String authorizationUrl = service.getAuthorizationUrl();
-        System.out.println("Got the Authorization URL!");
-        System.out.println("Now go and authorize ScribeJava here:");
-        System.out.println(authorizationUrl);
-        System.out.println("And paste the authorization code here");
-        System.out.print(">>");
-        final String code = in.nextLine();
-        in.close();
+        final String code;
+        try (Scanner in = new Scanner(System.in, "UTF-8")) {
+            System.out.println("=== " + NETWORK_NAME + "'s OAuth Workflow ===");
+            System.out.println();
+            // Obtain the Authorization URL
+            System.out.println("Fetching the Authorization URL...");
+            final String authorizationUrl = service.getAuthorizationUrl();
+            System.out.println("Got the Authorization URL!");
+            System.out.println("Now go and authorize ScribeJava here:");
+            System.out.println(authorizationUrl);
+            System.out.println("And paste the authorization code here");
+            System.out.print(">>");
+            code = in.nextLine();
+        }
         System.out.println();
 
         // Trade the Request Token and Verifier for the Access Token
@@ -62,7 +61,6 @@ public class Wunderlist20Example {
         // Now let's go and ask for a protected resource!
         System.out.println("Now we're going to access a protected resource...");
         final OAuthRequest request = new OAuthRequest(Verb.GET, PROTECTED_RESOURCE_URL);
-        request.addHeader("X-Client-ID", apiKey);
         service.signRequest(accessToken, request);
         final Response response = service.execute(request);
         System.out.println("Got it! Lets see what we found...");
